--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dotlottie_loader: ^0.0.3
   firebase_auth: ^4.7.2
   firebase_core: ^2.15.0
+  firebase_database: ^10.2.7
   fl_chart: ^0.63.0
   flutter:
     sdk: flutter
