--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.2.0
+  flutter_dotenv: ^5.1.0
   flutter_slidable: ^3.0.0
   flutter_svg: ^2.0.7
   get: ^4.6.5
@@ -40,6 +41,7 @@ flutter:
   assets: 
     - assets/images/
     - assets/svg/
+    - .env
 
   fonts:
     - family: KanitBold
